--- a/LLBLGenPro/DatabaseGeneric/AdventureWorks.Dal.Adapter.csproj
+++ b/LLBLGenPro/DatabaseGeneric/AdventureWorks.Dal.Adapter.csproj
@@ -6,6 +6,6 @@
     <RootNamespace>AdventureWorks.Dal.Adapter</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.5.2" />
+    <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.6.0-Beta-20190708" />
   </ItemGroup>
 </Project>
