--- a/RawBencher.Core/RawBencher.Core.csproj
+++ b/RawBencher.Core/RawBencher.Core.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -52,12 +52,12 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="1.60.6" />
-      <PackageReference Include="linq2db" Version="2.7.0" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
+      <PackageReference Include="linq2db" Version="2.7.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
       <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
-      <PackageReference Include="NPoco" Version="3.9.4" />
+      <PackageReference Include="NPoco" Version="4.0.1" />
       <PackageReference Include="RepoDb" Version="1.9.5" />
-      <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.5.3" />
+      <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.6.0-Beta-20190708" />
       <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="5.5.0" />
       <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
       <PackageReference Include="Tortuga.Anchor" Version="2.1.7001.32222" />
