--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -1,25 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net462" />
-  <package id="CS-Script.bin" version="3.28.7" targetFramework="net462" />
+  <package id="CS-Script.bin" version="3.29.0" targetFramework="net472" />
   <package id="Dapper" version="1.60.6" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net462" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net46" />
-  <package id="linq2db" version="2.7.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.2" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="3.0.0" targetFramework="net472" />
+  <package id="linq2db" version="2.7.4" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.3" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.1.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.1.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="3.1.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="3.1.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net462" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore" version="2.2.4" targetFramework="net472" />
-  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.2.4" targetFramework="net472" />
-  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.2.4" targetFramework="net472" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.2.4" targetFramework="net472" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore" version="2.2.6" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.2.6" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.2.6" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.2.6" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.2.6" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="2.2.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Caching.Memory" version="2.2.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net462" />
@@ -32,17 +32,17 @@
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.OptionsModel" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.NETCore.Platforms" version="2.2.1" targetFramework="net472" />
+  <package id="Microsoft.NETCore.Platforms" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net462" />
   <package id="NHibernate" version="5.2.5" targetFramework="net472" />
-  <package id="NPoco" version="3.9.4" targetFramework="net462" />
+  <package id="NPoco" version="4.0.1" targetFramework="net472" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net462" />
   <package id="RepoDb" version="1.9.5" targetFramework="net472" />
-  <package id="SD.LLBLGen.Pro.DQE.SqlServer" version="5.5.3" targetFramework="net472" />
-  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.5.3" targetFramework="net472" />
+  <package id="SD.LLBLGen.Pro.DQE.SqlServer" version="5.6.0-Beta-20190708" targetFramework="net472" />
+  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.6.0-Beta-20190708" targetFramework="net472" />
   <package id="ServiceStack.Common" version="5.5.0" targetFramework="net472" />
   <package id="ServiceStack.Interfaces" version="5.5.0" targetFramework="net472" />
   <package id="ServiceStack.OrmLite" version="5.5.0" targetFramework="net472" />
@@ -107,7 +107,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
