Changes for llbl2003

--- a/LLBLGenPro2003/LLBL2003.AdventureWorks2008.csproj
+++ b/LLBLGenPro2003/LLBL2003.AdventureWorks2008.csproj
@@ -427,6 +427,8 @@
     <Compile Include="RelationClasses\WorkOrderRoutingRelations.cs" />
     <Compile Include="StoredProcedureCallerClasses\ActionProcedures.cs" />
     <Compile Include="StoredProcedureCallerClasses\RetrievalProcedures.cs" />
+    <Compile Include="TypedListClasses\SalesOrderHeaderTypedList.cs" />
+    <Compile Include="TypedListClasses\SalesOrderHeaderTypedListExtensions.cs" />
     <Compile Include="ValidatorClasses\AddressTypeValidator.cs" />
     <Compile Include="ValidatorClasses\AddressValidator.cs" />
     <Compile Include="ValidatorClasses\AWBuildVersionValidator.cs" />
