--- a/RawBencher/RawBencher.csproj
+++ b/RawBencher/RawBencher.csproj
@@ -331,6 +331,7 @@
     <Compile Include="Benchers\HandCodedBencherUsingGetFieldValue.cs" />
     <Compile Include="Benchers\LINQ2DBCompiledBencher.cs" />
     <Compile Include="Benchers\LINQ2DBNormalBencher.cs" />
+    <Compile Include="Benchers\LLBLGenPro2003NoChangeTrackingBencher.cs" />
     <Compile Include="Benchers\LLBLGenPro2003NormalBencher.cs" />
     <Compile Include="Benchers\LLBLGenProNoChangeTrackingQuerySpecPocoBencher.cs" />
     <Compile Include="Benchers\MassiveBencher.cs" />
