Added DTO graph fetching benches for EF Core and LLBLGen Pro v5.6

--- a/EFCore/Persistence/app.config
+++ b/EFCore/Persistence/app.config
@@ -2,6 +2,6 @@
 <configuration>
 	<connectionStrings>
 		<!-- please adjust the connection string embedded in the element below to target the proper catalog / server using the proper user / password combination -->
-		<add name="EF.ConnectionString.SQL Server (SqlClient)" connectionString="data source=win2008sql2012\sqlexpress;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False" providerName="System.Data.SqlClient" />
+		<add name="EF.ConnectionString.SQL Server (SqlClient)" connectionString="data source=thor.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration> 
