Update Linq2DB to 3.0.1

--- a/LINQ2DB/DAL/LINQ2DB.Bencher.csproj
+++ b/LINQ2DB/DAL/LINQ2DB.Bencher.csproj
@@ -31,9 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="linq2db, Version=2.9.7.0, Culture=neutral, PublicKeyToken=e41013125f9e410a">
-      <HintPath>..\..\packages\linq2db.2.9.7\lib\net46\linq2db.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="linq2db, Version=3.0.1.0, Culture=neutral, PublicKeyToken=e41013125f9e410a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\linq2db.3.0.1\lib\net46\linq2db.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
