--- a/EFCore/Persistence/EFCore.Bencher.Persistence.csproj
+++ b/EFCore/Persistence/EFCore.Bencher.Persistence.csproj
@@ -1,13 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <AssemblyName>EFCore.Bencher.Persistence</AssemblyName>
     <RootNamespace>EFCore.Bencher</RootNamespace>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
   </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.16" />
+	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Model\EFCore.Bencher.Model.csproj" />
   </ItemGroup>
