--- a/RawBencher.Core/RawBencher.Core.csproj
+++ b/RawBencher.Core/RawBencher.Core.csproj
@@ -65,12 +65,19 @@
       <PackageReference Include="RepoDb.SqlServer" Version="1.1.1" />
       <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.7.1" />
       <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="5.10.0" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
       <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
       <PackageReference Include="Tortuga.Anchor" Version="3.3.0" />
       <PackageReference Include="Tortuga.Chain.CompiledMaterializers" Version="3.3.3" />
       <PackageReference Include="Tortuga.Chain.Core" Version="3.3.2" />
       <PackageReference Include="Tortuga.Chain.SqlServer" Version="3.3.2" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="App.config">
+        <SubType>Designer</SubType>
+      </None>
     </ItemGroup>
 
 </Project>
